# test_task_drf_3

./: .gitignore  README.md  dummy_data.json  env.example  pyproject.toml  requirements.txt  run_app.bat  run_app.sh
constants/: __init__.py  load_env.py  setup_logs.py
constants/exceptions/: general.py
constants/user_feed/: models.py  paginators.py  serializers.py  views.py
django_application/: settings.py  urls.py
documents/: __init__.py  dummy_data.json  test_task.postman_collection.json
exceptions/: __init__.py
exceptions/user_feed/: serializers.py  views.py
services/: __init__.py  load_env.py  setup_logs.py
services/django_application/: __init__.py
services/user_feed/: models.py  views.py
user_feed/: __init__.py  admin.py  apps.py  models.py  paginators.py  serializers.py  urls.py  views.py
